Markdown記事のスタイルを変更。文字を大きくして読みやすくする

--- a/src/Hinata/Hinata.csproj
+++ b/src/Hinata/Hinata.csproj
@@ -190,6 +190,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\github-markdown.css" />
     <Content Include="Content\highlight\vs.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
